<resources>
    <string name="app_name">RestStudy</string>

    <string name="logo_name">Jstagram</string>
    <string name="email">이메일</string>
    <string name="email_addr">이메일 주소</string>
    <string name="email_regi">이메일 등록</string>
    <string name="password">비밀번호</string>
    <string name="make_password">비밀번호 만들기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="join">가입하기</string>
    <string name="phone_number">전화번호</string>
    <string name="next">다음</string>
    <string name="add_name">이름 추가</string>
    <string name="name">이름</string>
    <string name="contents">게시물</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="modify_profile">프로필 수정</string>
    <string name="cancel">취소</string>
    <string name="success">완료</string>
    <string name="edit_profile">프로필 편집</string>
    <string name="edit_profile_img">프로필 사진 바꾸기</string>
    <string name="introduce">소개</string>
    <string name="sign_up">회원 가입</string>
    <string name="sign_up_success">회원가입 완료</string>
    <string name="upload">올리기</string>
    <string name="confirm">확인</string>
    <string name="input_story">문구 입력...</string>
    <string name="remove">삭제하기</string>

    <string name="desc_lost_password">비밀번호를 잊으셨나요?</string>
    <string name="desc_have_not_id">계정이 없으신가요?</string>
    <string name="desc_already_have_id">이미 계정이 있으신가요?</string>
    <string name="desc_receive_info">업데이트 내용을 SMS로 수신할 수 있으며,\n 언제든지 수신을 취소할 수 있습니다.</string>
    <string name="desc_add_name">친구들이 회원님을 찾을 수 있도록 이름을 추가하세요.</string>
    <string name="desc_sign_up_success">%s님,\n Jstargram에 오신 것을 환영합니다</string>
    <string name="desc_sign_up_after">팔로우할 사람을 찾고, 사진을 공유해보세요.\n 사용자 이름은 언제든지 변경할 수 있습니다.</string>
    <string name="desc_email_regist">등록하신 이메일은 로그인 할 때 사용됩니다.</string>
    <string name="desc_already_regi_id">이 이메일은 다른 계정에서 사용하고 있습니다.</string>
    <string name="desc_invalid_email">잘못된 이메일이거나, 이미 등록된 이메일입니다.</string>
    <string name="desc_sign_up_failed">계정 생성에 실패하였습니다. \n잠시 후에 시도해 주세요.</string>
    <string name="desc_email_auth_error">이메일이 잘못되었습니다. \n다시 한 번 확인해 주세요.</string>
    <string name="desc_login_falied">이메일 혹은 비밀번호가 올바르지 않습니다. \n다시 한 번 확인해 주세요.</string>
    <string name="desc_input_name">이름을 입력해주세요.</string>
    <string name="desc_permission">권한 요청에 모두 동의해주셔야 이용 가능합니다. \n 설정에서 권한 허용을 하시기 바랍니다.</string>
    <string name="desc_img_upload">이미지를 선택해 주세요.</string>
    <string name="desc_img_not_selected">선택된 이미지가 없습니다.\n 이미지를 선택해 주세요.</string>
    <string name="desc_upload_failed">업로드가 실패하였습니다. \n잠시 후 다시 시도해 주세요.</string>
    <string name="desc_signup_error">입력되지 않은 항목이 있습니다.\n 다시 한 번 확인해 주세요.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

</resources>
