<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <data>

        <variable
                name="fragment"
                type="com.trebit.reststudy.ui.login.fragment.SignUpFragment"/>

        <variable
                name="activity"
                type="com.trebit.reststudy.ui.login.activity.LoginActivity"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true">

        <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:text="@string/sign_up"/>

        <TextView
                android:id="@+id/tv_descEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_signup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/desc_email_regist"/>

        <!-- 이메일 입력 레이아웃 -->
        <RelativeLayout
                android:id="@+id/rl_inputLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tv_descEmail"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >

            <EditText
                    android:id="@+id/et_inputMakeEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/black"
                    android:hint="@string/email_addr"
                    android:background="@color/gray_1"
                    android:textSize="15sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="50dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    />

            <ImageView
                    android:id="@+id/iv_clearEmail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:src="@drawable/icon_clear"
                    />
        </RelativeLayout>


        <!-- 비밀번호 입력 레이아웃 -->
        <RelativeLayout
                android:id="@+id/rl_makePw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/rl_inputLayout"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >

            <EditText
                    android:id="@+id/et_inputMakePw"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:background="@color/gray_1"
                    android:textSize="15sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="50dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    />


            <ImageView
                    android:id="@+id/iv_clearPw"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:src="@drawable/icon_clear"
                    />
        </RelativeLayout>


        <!-- 이름 입력 레이아웃 -->
        <RelativeLayout
                android:id="@+id/rl_nameLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/rl_makePw"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >

            <EditText
                    android:id="@+id/et_inputMakeName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/black"
                    android:hint="@string/name"
                    android:background="@color/gray_1"
                    android:textSize="15sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="50dp"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    />


            <ImageView
                    android:id="@+id/iv_clearName"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:src="@drawable/icon_clear"
                    />
        </RelativeLayout>


        <!-- 다음 버튼 -->
        <Button
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_nameLayout"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_login_btn"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/join"
                android:onClick="@{fragment::checkInputData}"
                />

        <!-- Bottom Layout -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                >

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9e9"
                    />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/divider"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/desc_already_have_id"
                        />

                <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="@drawable/color_text"
                        android:text="@string/login"
                        android:onClick="@{activity::removeFragment}"
                        />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>
