<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
                name="viewModel"
                type="com.trebit.reststudy.ui.login.viewmodel.LoginViewModel"/>
        <variable
                name="fragment"
                type="com.trebit.reststudy.ui.login.fragment.PasswordFragment"/>
        <variable
                name="activity"
                type="com.trebit.reststudy.ui.login.activity.LoginActivity" />

    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <TextView
                android:id="@+id/tv_makePw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:text="@string/make_password"
                android:textSize="30sp"
                android:textColor="@color/black"/>

        <RelativeLayout
                android:id="@+id/rl_makePw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tv_makePw"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >

            <EditText
                    android:id="@+id/et_makePw"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:background="@color/gray_1"
                    android:textSize="15sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="50dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:text="@={viewModel.inputMakePW}"
                    />


            <ImageView
                    android:id="@+id/iv_clearMakePw"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:src="@drawable/icon_clear"
                    android:onClick="@{fragment::clearText}"
                    app:clearImage="@{viewModel.inputMakePW}"
                    />
        </RelativeLayout>


        <!-- 다음 버튼 -->
        <Button
                android:id="@+id/btn_makePwNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_makePw"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/background_button"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/next"
                android:enabled="false"
                android:onClick="@{activity::navigatePage}"
                app:textValue="@{viewModel.inputMakePW}"
                />


        <!-- Bottom Layout -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                >

            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#e9e9e9"
                    />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/divider"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/desc_already_have_id"
                        />

                <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="@drawable/color_text"
                        android:text="@string/login"
                        android:onClick="@{activity::removeFragment}"
                        />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>


</layout>
